<resources>
    <string name="app_name">FoodReserve</string>
    <string name="caption_message">Enter your caption here</string>
    <string name="button_snap">Snap</string>
    <string name="button_search">Detect</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="button_recipes">Recipe</string>

    <string name="label_start_date">From:</string>
    <string name="label_end_date">To:</string>
    <string name="label_keywords">Search:</string>
    <string name="search_message">Filter photos by keywords</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>

    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>
    <string name="current_photo">Current photo</string>
    <string name="go">Go</string>
</resources>