<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.foodreserve.view.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="336dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/current_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/buttonSnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="52dp"
        android:onClick="takePhoto"
        android:text="@string/button_snap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/button_snap" />

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="scrollLeft"
        android:text="@string/button_left"
        app:layout_constraintBottom_toTopOf="@+id/buttonRecipes"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/button_left" />

    <Button
        android:id="@+id/buttonRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="scrollRight"
        android:text="@string/button_right"
        app:layout_constraintBottom_toTopOf="@+id/buttonSnap"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/button_right" />

    <Button
        android:id="@+id/buttonDetect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="searchFood"
        android:text="@string/button_search"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toStartOf="@+id/buttonSnap"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toEndOf="@+id/buttonRecipes"
        tools:text="@string/button_search" />

    <EditText
        android:id="@+id/editTextCaption"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/caption_message"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textViewTimestamp"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Timestamp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCaption" />

    <Button
        android:id="@+id/buttonRecipes"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="goToRecipes"
        android:text="@string/button_recipes"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewFilename"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Filename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimestamp" />

    <TextView
        android:id="@+id/textViewLat"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFilename" />

    <TextView
        android:id="@+id/textViewLong"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLat" />

    <Button
        android:id="@+id/btnUpdateCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="updateCaption"
        android:text="Update\nCaption"
        app:layout_constraintBottom_toTopOf="@+id/buttonDetect"
        app:layout_constraintEnd_toStartOf="@+id/buttonRight"
        app:layout_constraintStart_toEndOf="@+id/buttonLeft" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android.id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:background="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSnap"
        app:menu="@menu/bottom_nav_menu" />

    <EditText
        android:id="@+id/editTextDetectedObject"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLong"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
